@@ -1,3 +1,8 @@
+2006-09-03  Claes Nästén  <me{@}pekdon{.}net>
+
+	* src/CmdDialog.cc (CmdDialog::bufKill): 
+	Added kill to end of line to action CmdDialog named KILL.
+
 2006-08-31  Claes Nästén  <me{@}pekdon{.}net>
 
 	* src/Frame.cc (Frame): 
